<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple Tweet</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="screen_name">@%1$s</string>
    <string name="profile_image">Profile Image</string>
    <string name="display_name">Display Name</string>
    <string name="tweet_body">Tweet Body</string>
    <string name="retweets">1K</string>
    <string name="favorites">1K</string>
    <string name="time">1m</string>
    <string name="compose_hint">What\'\s happening?</string>
    <string name="tweetBtn">Tweet</string>
    <string name="char_count">280</string>
</resources>